kubernetes/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phishing-detection-app-v1
<<<<<<< HEAD
=======
  namespace: operations
>>>>>>> main
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: app-v1
  template:
    metadata:
<<<<<<< HEAD
      labels:
        deployment: app-v1
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
=======
      labels: { deployment: app, version: v1 }
>>>>>>> main
    spec:
      containers:
      - name: django-app
        image: ghcr.io/remla24-team6/app:latest
        ports:
        - containerPort: 8000
        command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phishing-detection-app-v2
  namespace: operations
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: app
  template:
    metadata:
      labels: { deployment: app, version: v2 }
    spec:
      containers:
      - name: django-app
        image: ghcr.io/remla24-team6/app:0.0.7
        ports:
        - containerPort: 8000
        command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: operations
spec:
  selector:
    deployment: app-v1
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service-v2
  labels:
    deployment: app
spec:
  selector:
    deployment: app-v2
  ports:
    - port: 8000
      targetPort: 8000
