kubernetes/model.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phishing-detection-model
  namespace: operations
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: model
  template:
    metadata:
      labels:
        deployment: model
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: model
          image: ghcr.io/remla24-team6/model-service:latest
          ports:
            - containerPort: 5000
          command:
            ["poetry", "run", "flask", "run", "--host=0.0.0.0", "-p", "5000"]
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: operations
spec:
  selector:
    deployment: model
  ports:
    - port: 5000
      targetPort: 5000
