kubernetes/istio.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: operations
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: { number: 80, name: http, protocol: HTTP }
      hosts: ["*"]
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-dr
  namespace: operations
spec:
  host: django-app-service
  subsets:
    - name: v1
      labels: { version: v1 }
    - name: v2
      labels: { version: v2 }
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: entry-service
  namespace: operations
spec:
  gateways: [istio-gateway]
  hosts: ["*"]
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination: { host: django-app-service, subset: v1 }
          weight: 90
        - destination: { host: django-app-service, subset: v2 }
          weight: 10
